<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:onClick="fragmen_detail"
                        android:src="@drawable/buku1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:linksClickable="true"
                        android:padding="3dp"
                        android:text="@string/harry"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="1dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/buku2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:padding="3dp"
                        android:text="@string/percy"
                        android:onClick="cuaca"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </LinearLayout>



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="1dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/buku3"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:padding="3dp"
                        android:text="@string/laskar"
                        android:onClick="profil"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </LinearLayout>

            </LinearLayout>

            <!--            baris 2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="20dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="1dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/buku4"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:padding="3dp"
                        android:text="@string/perahu"
                        android:onClick="konsultasi"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="1dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/buku5"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:padding="3dp"
                        android:text="@string/sang"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                    <fragment
                        android:id="@+id/nav_host_fragment"
                        android:name="androidx.navigation.fragment.NavHostFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:defaultNavHost="true"
                        app:navGraph="@navigation/mobile_navigation" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="1dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/buku6"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:padding="3dp"
                        android:text="@string/menara"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </LinearLayout>



            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>